<resources>
    <string name="app_name">PetShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_product">Sản phẩm</string>
    <string name="menu_customer">Khách hàng</string>
    <string name="menu_user">Tài khoản</string>
    <string name="menu_password">Thay đổi mật khẩu</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="menu_exit">Thoát</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>