<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/baseline_home_24"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_product"
                    android:icon="@drawable/baseline_emoji_food_beverage_24"
                    android:title="@string/menu_product" />
                <item
                    android:id="@+id/nav_customer"
                    android:icon="@drawable/baseline_people_24"
                    android:title="@string/menu_customer" />
            </group>
    <item android:title="Quản lý tài khoản">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_user"
                    android:icon="@drawable/baseline_person_24"
                    android:title="@string/menu_user" />
                <item
                    android:id="@+id/nav_password"
                    android:icon="@drawable/baseline_key_24"
                    android:title="@string/menu_password" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/menu_logout" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/baseline_exit_to_app_24"
                    android:title="@string/menu_exit" />
            </group>
        </menu>
    </item>


</menu>