<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.petshop.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.petshop.ui.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.petshop.ui.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" />
    <fragment
        android:id="@+id/nav_password"
        android:name="com.example.petshop.ui.PasswordFragment"
        android:label="@string/menu_password"
        tools:layout="@layout/fragment_password" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.petshop.ui.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />

    <fragment android:id="@+id/nav_logout"
        android:name="com.example.petshop.ui.HomeFragment"
        tools:layout="@layout/fragment_home" />
    <fragment android:id="@+id/nav_exit"
        android:name="com.example.petshop.ui.HomeFragment"
        tools:layout="@layout/fragment_home" />
    <fragment android:id="@+id/nav_item_product"
        android:name="com.example.petshop.ui.item_product.ItemProductFragment"
        tools:layout="@layout/fragment_item_product"
        android:label="Detail Product"/>

    <!-- Định nghĩa các hành động điều hướng giữa các Fragment -->
    <action
        android:id="@+id/action_product_to_itemProduct"
        app:destination="@id/nav_item_product" />
</navigation>